# smartcam

./: ProjectHome.md  configure.sh
config/: CMakeLists.txt  kermit-config
include/: bt-scan-rssi.h  commands.h  struct.h
pc-client/src/: CMakeLists.txt
pc-client/src/bt-client/: bt-client.c
pc-server/src/: CMakeLists.txt
pc-server/src/server/: CMakeLists.txt  server.c
src/bt-scan/: CMakeLists.txt  bt-scan-rssi.c  commands.c  gumstix.c
src/bt-test/: bt-test.c
src/cv-test/: cv-test.c
src/helloworld/: CMakeLists.txt  helloworld.c
src/libHello/: libHello.c
src/rfcomm-client/: CMakeLists.txt
trunk/: configure.sh
trunk/config/: CMakeLists.txt  usefull-commands.txt
trunk/include/: bt-scan-rssi.h  commands.h  struct.h
trunk/pc-client/src/: CMakeLists.txt
trunk/pc-client/src/bt-client/: CMakeLists.txt  bt-client.c
trunk/pc-server/src/server/: CMakeLists.txt  server.c
trunk/src/: CMakeLists.txt
trunk/src/bt-scan/: CMakeLists.txt  bt-scan-rssi.c  commands.c  gumstix.c
trunk/src/bt-test/: CMakeLists.txt
trunk/src/cv-test/: CMakeLists.txt  cv-test.c
trunk/src/libHello/: CMakeLists.txt
trunk/src/rfcomm-client/: rfcomm-client.c
