cmake_minimum_required (VERSION 2.6)
PROJECT (PC-Server) 

LINK_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/../lib )
INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/../include )
INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/../../include )

SET ( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin )
#SET ( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib )
SET ( DOC_OUTPUT_PATH ${CMAKE_BINARY_DIR}/../doc )
SET ( CMAKE_C_FLAGS "-D_REENTRANT -Wno-unused-function" )

OPTION( SERVER "Build gumstix server program" ON )

IF(SERVER)
	ADD_SUBDIRECTORY ( server )
ENDIF()


