cmake_minimum_required (VERSION 2.6)
PROJECT (Server) 

LINK_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/../lib )
INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR}/../include )

SET ( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin )
SET ( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib )
SET ( DOC_OUTPUT_PATH ${CMAKE_BINARY_DIR}/../doc )

#ADD_SUBDIRECTORY (src)

OPTION( BUILD_BT_CLIENT "Build bluetooth client program" ON )


IF(BUILD_BT_CLIENT)
	ADD_SUBDIRECTORY ( bt-client )
ENDIF()


